Fix unnecessary scrollbars in Chromium

--- a/main.css
+++ b/main.css
@@ -22,7 +22,7 @@ nav {
   width: 100%;
   padding: 0.5rem;
   font-size: 1.5rem;
-  overflow-x: scroll;
+  overflow-x: auto;
 }
 
 #days > div,
@@ -51,7 +51,7 @@ nav {
   display: flex;
   flex-direction: column;
   gap: 0;
-  overflow-x: scroll;
+  overflow-x: auto;
   width: 100%;
   padding: 0.5rem;
 }
